applications/petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: petclinic
