applications/petclinic/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
spec:
  to:
    kind: Service
    name: petclinic
  port:
    targetPort: 80
  tls:
    termination: edge
